examples/test/testpolicy19449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19449
  namespace: namespace316
spec:
  podSelector:
    matchLabels:
      key32: value1
      key20: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value37
      podSelector:
        matchLabels:
          key0: value26
          key34: value34
          key11: value3
